Bug 277216 - The contact list should remember my preferences
Summary: The contact list should remember my preferences
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: git-latest
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: 0.4.0
Assignee: Martin Klapetek
URL:
Keywords:
: 271970 273806 275776 (view as bug list)
Depends on:
Blocks: tppreviewrelease
  Show dependency treegraph
 
Reported: 2011-07-06 18:02 UTC by Vishesh Handa
Modified: 2012-07-06 12:47 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Vishesh Handa 2011-07-06 18:02:09 UTC
Version:           git-latest (using Devel) 
OS:                Linux

Every time I launch the Contact list, it shows me all my groups - "Friends", "Family", "School", and all the lists are collapsed. I then need to click on "Show/Hide groups" button cause I don't like groups. Then I need to click on the one remaining group whose name is my jabber account, and then I can finally see my contacts.

I need to do this every time the contact list is started. Please try to fix this.

Reproducible: Always

Steps to Reproduce:
Written above ^


Expected Results:  
It should remember which groups I had open, and if I had clicked on the "Show/Hide Groups" button.
Comment 1 Martin Klapetek 2011-07-07 10:26:01 UTC
*** Bug 271970 has been marked as a duplicate of this bug. ***
Comment 2 Martin Klapetek 2011-07-07 10:26:30 UTC
*** Bug 275776 has been marked as a duplicate of this bug. ***
Comment 3 Martin Klapetek 2011-07-07 10:27:54 UTC
*** Bug 273806 has been marked as a duplicate of this bug. ***
Comment 4 Martin Klapetek 2011-07-13 15:51:07 UTC
Git commit 8bd313dc7cd41d57ad9ef9e7088aa178b5c45972 by Martin Klapetek.
Committed on 13/07/2011 at 17:44.
Pushed by mklapetek into branch 'master'.

Save GUI config upon exit.

BUG: 277216
REVIEW: 101915
Reviewed-by: Francesco Nwokeka

M  +24   -2    main-widget.cpp     

http://commits.kde.org/telepathy-contact-list/8bd313dc7cd41d57ad9ef9e7088aa178b5c45972
Comment 5 David Edmundson 2011-07-20 11:04:57 UTC
[12:01] <Sho_> d_ed: I've reopened the contacts list about half a dozen times during the last ~hour of testing and had to recheck the hide groups tool button every time
[12:01] <Sho_> at the same time it did however save my choice of the compact list style
[12:02] <Sho_> so i'm fairly certain the group hiding thigng is buggered :-)

 if (guiConfigGroup.readEntry("use_groups", true)) {
        onGroupContacts(true);
        m_groupContactsAction->setChecked(true);
    }

I'm willing to be the default setup is to show the groups - at which point this code needs an "else {onGroupContacts(false)" (or to rearrange some other code).
Comment 6 Eike Hein 2011-07-20 11:17:58 UTC
Git commit 0690f5c9a70b4730604222ccaf922e1f206730cc by Eike Hein.
Committed on 20/07/2011 at 13:25.
Pushed by hein into branch 'master'.

Fix preferences load code.

There was a logic error in there causing stored boolean preferences
to only be applied when they were set to true, thus e.g. disabling
groups wouldn't survive accross restarts.

CCBUG:277216

M  +10   -13   main-widget.cpp

http://commits.kde.org/telepathy-contact-list/0690f5c9a70b4730604222ccaf922e1f206730cc
Comment 7 Martin Klapetek 2011-10-02 17:28:07 UTC
Git commit 2d7dcdfc539276ccc0c407f184c7257008c3fda5 by Martin Klapetek.
Committed on 02/10/2011 at 19:24.
Pushed by mklapetek into branch 'master'.

Save group's expanded state and restore it upon contact list reopening

Reviewed-by: David Edmundson
REVIEW: 102728
FEATURE: 282206
CCBUG: 277216

M  +41   -0    main-widget.cpp
M  +1    -0    main-widget.h

http://commits.kde.org/telepathy-contact-list/2d7dcdfc539276ccc0c407f184c7257008c3fda5