Save GUI config upon exit.

BUG: 277216
REVIEW: 101915
Reviewed-by: Francesco Nwokeka